--- a/index.html
+++ b/index.html
@@ -71,10 +71,107 @@
   <div id="message"></div>
   <script>
     const words = [
-      { word: "planet", meaning: "A celestial body orbiting a star." },
-      { word: "rocket", meaning: "A vehicle used for space travel." },
-      { word: "forest", meaning: "A large area covered with trees." },
-    ];
+  { word: "absorb", meaning: "To take in or soak up a substance." },
+  { word: "active", meaning: "Engaged in action; full of movement." },
+  { word: "admire", meaning: "To regard with respect or warm approval." },
+  { word: "advice", meaning: "Guidance or recommendations offered." },
+  { word: "afford", meaning: "To have enough money to pay for something." },
+  { word: "almost", meaning: "Very nearly, but not exactly." },
+  { word: "amount", meaning: "A quantity of something." },
+  { word: "animal", meaning: "A living creature that is not a plant." },
+  { word: "answer", meaning: "A reply or solution to a question." },
+  { word: "anyone", meaning: "Any person at all." },
+  { word: "appear", meaning: "To become visible or noticeable." },
+  { word: "around", meaning: "Located or situated nearby." },
+  { word: "author", meaning: "A person who writes books or articles." },
+  { word: "better", meaning: "Of higher quality or more desirable." },
+  { word: "bottle", meaning: "A container for liquids, usually glass or plastic." },
+  { word: "branch", meaning: "A part of a tree growing from the trunk." },
+  { word: "bright", meaning: "Giving out or reflecting a lot of light." },
+  { word: "broken", meaning: "Damaged and no longer working." },
+  { word: "camera", meaning: "A device used to capture photographs or videos." },
+  { word: "cancel", meaning: "To decide something will not happen." },
+  { word: "candle", meaning: "A stick of wax with a wick for burning." },
+  { word: "cannot", meaning: "Unable to do something." },
+  { word: "castle", meaning: "A large building with strong walls, often historical." },
+  { word: "center", meaning: "The middle point of something." },
+  { word: "chance", meaning: "An opportunity or possibility." },
+  { word: "charge", meaning: "To ask for payment; to attack." },
+  { word: "choice", meaning: "An act of selecting among options." },
+  { word: "circle", meaning: "A round shape with no beginning or end." },
+  { word: "client", meaning: "A customer or person using services." },
+  { word: "closed", meaning: "Not open." },
+  { word: "coffee", meaning: "A drink made from roasted coffee beans." },
+  { word: "common", meaning: "Something occurring often or widely shared." },
+  { word: "copper", meaning: "A reddish-brown metal used in wires." },
+  { word: "couple", meaning: "Two people or things considered together." },
+  { word: "create", meaning: "To bring something into existence." },
+  { word: "credit", meaning: "Borrowed money or acknowledgment of work." },
+  { word: "custom", meaning: "A tradition or usual practice." },
+  { word: "damage", meaning: "Harm that reduces value or usefulness." },
+  { word: "danger", meaning: "The possibility of harm or injury." },
+  { word: "dealer", meaning: "A person who buys and sells goods." },
+  { word: "debate", meaning: "A formal discussion on a topic." },
+  { word: "degree", meaning: "A unit of measurement or academic award." },
+  { word: "demand", meaning: "A strong request or need." },
+  { word: "desert", meaning: "A dry, barren sandy area." },
+  { word: "design", meaning: "A plan or drawing of something before it’s built." },
+  { word: "detail", meaning: "An individual feature or fact." },
+  { word: "device", meaning: "A piece of equipment created for a purpose." },
+  { word: "dinner", meaning: "The main meal of the day." },
+  { word: "doctor", meaning: "A person qualified to treat illnesses." },
+  { word: "double", meaning: "Twice as much or twice in size." },
+  { word: "dragon", meaning: "A mythical creature that breathes fire." },
+  { word: "driver", meaning: "A person who operates a vehicle." },
+  { word: "editor", meaning: "A person who prepares written work for publishing." },
+  { word: "effect", meaning: "A change caused by an action." },
+  { word: "effort", meaning: "Use of physical or mental energy." },
+  { word: "energy", meaning: "The strength or power to do work." },
+  { word: "enjoy", meaning: "To take pleasure in something." },
+  { word: "escape", meaning: "To break free from control or confinement." },
+  { word: "family", meaning: "A group of related people." },
+  { word: "famous", meaning: "Well known by many people." },
+  { word: "father", meaning: "A male parent." },
+  { word: "figure", meaning: "A number, shape, or a person’s outline." },
+  { word: "flight", meaning: "The act of flying." },
+  { word: "flower", meaning: "The blossom of a plant." },
+  { word: "forest", meaning: "A large area covered with trees." },
+  { word: "formal", meaning: "Following rules, proper or official." },
+  { word: "future", meaning: "The time yet to come." },
+  { word: "garden", meaning: "A place where plants or flowers are grown." },
+  { word: "gather", meaning: "To collect or bring together." },
+  { word: "gentle", meaning: "Kind and not rough." },
+  { word: "golden", meaning: "Made of or colored like gold." },
+  { word: "ground", meaning: "The solid surface of the earth." },
+  { word: "growth", meaning: "The process of increasing in size." },
+  { word: "health", meaning: "The state of physical or mental well-being." },
+  { word: "hidden", meaning: "Kept out of sight; concealed." },
+  { word: "honore", meaning: "To show respect or recognition." },
+  { word: "income", meaning: "Money received for work or investment." },
+  { word: "island", meaning: "Land surrounded by water." },
+  { word: "junior", meaning: "Lower in rank or younger in age." },
+  { word: "ladder", meaning: "A structure used for climbing." },
+  { word: "launch", meaning: "To start or set something in motion." },
+  { word: "leader", meaning: "A person in charge or guiding others." },
+  { word: "little", meaning: "Small in size or amount." },
+  { word: "market", meaning: "A place where goods are bought and sold." },
+  { word: "master", meaning: "A skilled person or one in control." },
+  { word: "memory", meaning: "The ability to recall past experiences." },
+  { word: "minute", meaning: "A unit of time; very small." },
+  { word: "modern", meaning: "Relating to the present or recent times." },
+  { word: "mother", meaning: "A female parent." },
+  { word: "nation", meaning: "A large group of people united by government." },
+  { word: "nature", meaning: "The physical world and living things." },
+  { word: "office", meaning: "A place where business is conducted." },
+  { word: "option", meaning: "A choice among alternatives." },
+  { word: "parent", meaning: "A person’s mother or father." },
+  { word: "people", meaning: "Human beings in general." },
+  { word: "planet", meaning: "A celestial body orbiting a star." },
+  { word: "player", meaning: "A person who participates in a game or sport." },
+  { word: "police", meaning: "The civil force maintaining public order." },
+  { word: "public", meaning: "Open to or shared by everyone." },
+  { word: "record", meaning: "A documented account or highest achievement." }
+];
 
     let score = 0;
     let chances = 3;
