--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     Score: <span id="score">0</span> | Chances left: <span id="chances">3</span>
   </div>
   <div id="game"></div>
-  <div id="meaning">💡 Meaning: </div>
+  <h2>💡 Meaning:</h2> <div id="meaning"></div>
   <div id="message"></div>
   <script>
     const words = [
