--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Word Guess Game</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Inconsolas', monospace;
       text-align: center;
       padding: 40px;
       background: #f9f9f9;
