--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <div id="instructions">
     <h3>How to Play:</h3>
     <ul>
-      <li>Type letters directly into the boxes.</li>
+      <li>Guess the word based on the given meaning 💡.</li>
       <li>Hit Enter after filling all letters to check your guess.</li>
       <li>You have 3 chances in total — use them wisely!</li>
     </ul>
